Testing Robofriends app via Jest

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,19 +3,23 @@
         "Abhishek",
         "Aman",
         "Boundry",
+        "cfaester",
         "intial",
         "lalit",
         "Nigam",
         "noopener",
         "noreferrer",
         "Pardhan",
+        "precached",
         "predeploy",
         "Robo",
         "Sharma",
         "Shashank",
         "thakur",
+        "TTFB",
         "vishal",
         "Vivek",
-        "webfonts"
+        "webfonts",
+        "wojtekmaj"
     ]
 }
